--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       border-radius: 15px;  
       border: 1px solid rgba(255, 160, 122, 0.2);  
       backdrop-filter: blur(8px);  
+      z-index: 1000;  
     }  
     
     .search-input {  
@@ -125,6 +126,7 @@
       color: #ffdcd1;  
       border: 1px solid rgba(255, 160, 122, 0.2);  
       backdrop-filter: blur(8px);  
+      z-index: 1000;  
     }  
 
     @keyframes pulse {  
@@ -156,9 +158,9 @@
   <div class="stats-panel">  
     <h3 class="text-lg font-bold mb-2">Statistics</h3>  
     <div id="stats-content">  
-      <p>Total Districts: <span id="total-districts">0</span></p>  
-      <p>Total Population: <span id="total-population">0</span></p>  
-      <p>Avg Population: <span id="avg-population">0</span></p>  
+      <p>Total Districts: <span id="total-districts">323</span></p>  
+      <p>Total Population: <span id="total-population">4,147,660</span></p>  
+      <p>Avg Population: <span id="avg-population">12,841</span></p>  
     </div>  
   </div>  
   
