--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       text-align: center;  
       font-size: 2.5rem;  
       margin: 20px 0;  
+      margin-left: 300px;  
       text-shadow: 0 0 30px rgba(255, 107, 74, 0.3);  
     }  
     
@@ -342,4 +343,4 @@
     });  
   </script>  
 </body>  
-</html> 
+</html>  
