--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
       background-clip: text;  
       color: transparent;  
       text-align: center;  
-      font-size: 2.5rem;  
-      margin: 20px 0;  
-      margin-left: 300px;  
+      font-size: 2rem;  
+      margin: 20px auto;  
+      width: 400px;  
+      position: relative;  
+      left: 50%;  
+      transform: translateX(-50%);  
       text-shadow: 0 0 30px rgba(255, 107, 74, 0.3);  
+      z-index: 1000;  
     }  
     
     #tooltip {  
